# esp32-demos

./: .gitignore  README.md
blink/: CMakeLists.txt  sdkconfig.defaults
blink/src/: blink_example_main.c
ethernet_basic/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
ethernet_basic/src/: CMakeLists.txt  ethernet_example_main.c
hello_world/: CMakeLists.txt
hello_world/src/: hello_world_main.c
led_button/: CMakeLists.txt  sdkconfig.defaults
led_button/src/: CMakeLists.txt  led_button.c
mqtt/desktop_proto_client/: CMakeLists.txt
mqtt/desktop_proto_client/cmake/: FindMosquitto.cmake
mqtt/desktop_proto_client/proto/: gps.proto
mqtt/desktop_proto_client/src/: main.cpp
mqtt/esp32_client/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  test.conf
mqtt/esp32_client/components/ethernet_init/: ethernet_init.c
mqtt/esp32_client/src/: CMakeLists.txt  Kconfig.projbuild  mqtt_example_main.cpp
mqtt/esp32_proto_client/: CMakeLists.txt  README.md  sdkconfig.esp32
mqtt/esp32_proto_client/components/mdns/: mdns.c
mqtt/esp32_proto_client/src/: Kconfig.projbuild  mqtt_protobuf_example_main.cpp
protobuf_test/: CMakeLists.txt  CMakeToolchain.cmake  README.md
protobuf_test/src/: CMakeLists.txt  protobuf_example_main.c  protobuf_example_main.cpp
